--- a/src/routes/blog/04-05-2023.md
+++ b/src/routes/blog/04-05-2023.md
@@ -14,3 +14,22 @@ content: >-
 
   * m﻿ay have to just use markdown
 ---
+#﻿ Title
+
+#﻿# Title 2
+
+#﻿# Title 3
+
+[﻿Youtube Video](https://youtube.com/)
+
+*﻿*Test bold**
+
+*﻿test italic*
+
+B﻿ullet Test
+
+-﻿ test
+
+-﻿ test 2
+
+-﻿ test 3
