--- a/src/routes/roster/07-11-2023.md
+++ b/src/routes/roster/07-11-2023.md
@@ -1,7 +1,7 @@
 ---
-teamName: SOG
+teamName: SOG - Test
 game: League
 teammates:
-  - player: Player One
-  - player: Player Two
+  - Player One
+  - Player Two
 ---
