--- a/src/routes/rosters/23-04-2023-1.md
+++ b/src/routes/rosters/23-04-2023-1.md
@@ -1,5 +1,47 @@
 ---
 gamerTag: Player Two
 IRL: Sally
+playerPicture: /uploads/pfp.png
+socialMedia:
+  - socialMedia:
+      platform: Twitter
+      url: https://twitter.com/FireBrickRed
+  - socialMedia:
+      platform: Twitch
+      url: https://www.twitch.tv/firebrick
+about: H﻿ere is a bunch of words so that this place gets filled out. I hate
+  writing these, but have to write something so that I know what I'll be working
+  with. Gotta make it decently long as well so that I can style it
+  approperatoaiefnasgn. Gave up spelling that one, messed up, got lazy. You know
+  the drill. Alrighty jsut a little bit more to go. maybe another line or two?
+  who knows we will see by the time this paragraph is over.
+esportsTeamAndRole:
+  esportsTeam: SOG - Test
+  teamRoles:
+    - Mascot
+roleInOrg:
+  - Testing dummy
+clips:
+  - title: Oh Zach
+    file: https://clips.twitch.tv/SnappyBreakableLarkKevinTurtle-xQh0-Knnvf0wlVKU
+  - title: tko
+    file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
+  - title: tko pt 2
+    file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
+ranks:
+  - gameName: Valorant
+    gameRank: Silver
+  - gameName: TFT
+    gameRank: Gold
+  - gameName: League of Legends
+    gameRank: Radiant
+playerAchievements: []
+favoriteGames:
+  - Zero escape trilogy
+  - Wizard101
+  - TFT
+  - Game
+  - Game2
+recentGame: Dine At Nite
 teamAffiliation: SOG
 ---
