--- a/src/routes/blog/02-05-2023.md
+++ b/src/routes/blog/02-05-2023.md
@@ -18,6 +18,7 @@ content: >-
   * Rule #3: Respect the Disrespect: League is not only a game of mechanical skill and experience but emotional torment. One way to decimate your enemies will to play the game is to waste your flash in front of them at the start of the game to flex the fact you don’t need such pitiful handicaps.
 
   * Rule #4: Always waste your first flash
+summary: S﻿hort summary cuz lame
 ---
 <!--StartFragment-->
 
