--- a/src/routes/blog/12-11-2023.md
+++ b/src/routes/blog/12-11-2023.md
@@ -5,7 +5,7 @@ summary: s﻿hort summary that I need to make not required >.>
 ---
 <!--StartFragment-->
 
-Strategy, tactics, and even coordination are all factors of determining how you will play your next ARAM. But here at SUBOPTIMALGAMING we find the process of simply playing, well, quite boring, so to add some flare to our gameplay and more appropriately terrorize the Howling Abyss here are some rules we abide by when playing ARAM.
+Strategy, tactics, and even coordination are all factors of determining how you will play your next ARAM. But here at SUBOPTIMALGAMING we find the process of simply playing, well, quite boring, so to add some flare to our game
 
 * Rule #1: Everyone take snowball. Besides from being a unique gap close that deals true damage for securing kills this summoner spell gives everyone the obligation of going in to fight causing even more hectic and chaotic skirmishes and brings me to our next rule.
 * Rule #2: Make it take it: A common troupe we have been practicing in our intense games has to do with the snowball everyone has taken. If you land your snowball (make it) you must recast (take it) sending you towards the enemy or minion hit with the summoner no matter the circumstances around it.
