--- a/src/routes/rosters/23-04-2023.md
+++ b/src/routes/rosters/23-04-2023.md
@@ -1,4 +1,19 @@
 ---
-gamerTag: Player One
-IRL: Wade
+gamerTag: TheBookQueen
+IRL: "Larissa "
+about: Do I play games because I'm good? Hell no. Do I play games because I
+  enjoy the fresh, toxic atmosphere? Possibly. But the reason I keep turning on
+  that console and putting on that headset, is really because of the assholes on
+  my friends list. Plus, someone needs to keep those hooligans in check.
+roleInOrg:
+  - SOG OVERLORD
+playerAchievements:
+  - "Certificate of Sub Optimal Excellence: Multitasking Overlord Grand Master
+    Award"
+favoriteGames:
+  - "Mass Effect "
+  - "Ark Survival "
+  - "Halo "
+  - "League of Legends "
+recentGame: "BG3 "
 ---
