--- a/src/routes/rosters/23-04-2023.md
+++ b/src/routes/rosters/23-04-2023.md
@@ -5,6 +5,10 @@ about: Do I play games because I'm good? Hell no. Do I play games because I
   enjoy the fresh, toxic atmosphere? Possibly. But the reason I keep turning on
   that console and putting on that headset, is really because of the assholes on
   my friends list. Plus, someone needs to keep those hooligans in check.
+esportsTeamAndRole:
+  esportsTeam: ""
+  teamRoles:
+    - " "
 roleInOrg:
   - SOG OVERLORD
 playerAchievements:
