--- a/src/routes/rosters/11-11-2023.md
+++ b/src/routes/rosters/11-11-2023.md
@@ -1,22 +1,23 @@
 ---
 gamerTag: FireBrick
 IRL: Jessica
-socialMedia:
-  - socialMedia:
-      platform: Twitch
-      url: https://www.twitch.tv/firebrick
-roleInOrg:
-  - Web Developer & Designer
 clips:
   - title: TKO
     file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
   - title: TKO pt 2
     file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
-ranks:
-  - gameName: Valorant
-    gameRank: Silver
 favoriteGames:
   - Zero Escape Trilogy
   - Wizard101
+ranks:
+  - gameName: Valorant
+    gameRank: Silver
+roleInOrg:
+  - Web Developer & Designer
+steamId: "76561198038986067"
 recentGame: Lethal Company
+socialMedia:
+  - socialMedia:
+      platform: Twitch
+      url: https://www.twitch.tv/firebrick
 ---
