--- a/src/routes/rosters/23-04-2023-1.md
+++ b/src/routes/rosters/23-04-2023-1.md
@@ -19,8 +19,6 @@ esportsTeamAndRole:
   esportsTeam: SOG - Test
   teamRoles:
     - Mascot
-roleInOrg:
-  - Testing dummy
 clips:
   - title: Oh Zach
     file: https://clips.twitch.tv/SnappyBreakableLarkKevinTurtle-xQh0-Knnvf0wlVKU
@@ -28,13 +26,6 @@ clips:
     file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
   - title: tko pt 2
     file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
-ranks:
-  - gameName: Valorant
-    gameRank: Silver
-  - gameName: TFT
-    gameRank: Gold
-  - gameName: League of Legends
-    gameRank: Radiant
 playerAchievements: []
 favoriteGames:
   - Zero escape trilogy
@@ -42,6 +33,16 @@ favoriteGames:
   - TFT
   - Game
   - Game2
+ranks:
+  - gameName: Valorant
+    gameRank: Silver
+  - gameName: TFT
+    gameRank: Gold
+  - gameName: League of Legends
+    gameRank: Radiant
+roleInOrg:
+  - Testing dummy
+steamId: "76561198392359239"
 recentGame: Dine At Nite
 teamAffiliation: SOG
 ---
