--- a/src/routes/rosters/23-04-2023-1.md
+++ b/src/routes/rosters/23-04-2023-1.md
@@ -26,6 +26,7 @@ clips:
     file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
   - title: tko pt 2
     file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
+summonerName: Gh0st X
 playerAchievements: []
 favoriteGames:
   - Zero escape trilogy
