--- a/src/routes/rosters/09-02-2024.md
+++ b/src/routes/rosters/09-02-2024.md
@@ -31,5 +31,6 @@ favoriteGames:
   - League of Legends
   - Call of duty modern warfare 2 2009
   - "Pokemon: Emerald"
+  - DND
 steamId: "76561199018948085"
 ---
