--- a/src/routes/rosters/23-04-2023.md
+++ b/src/routes/rosters/23-04-2023.md
@@ -11,6 +11,7 @@ esportsTeamAndRole:
     - " "
 roleInOrg:
   - SOG OVERLORD
+summonerName: The Book Queen
 playerAchievements:
   - "Certificate of Sub Optimal Excellence: Multitasking Overlord Grand Master
     Award"
