--- a/src/routes/rosters/11-11-2023.md
+++ b/src/routes/rosters/11-11-2023.md
@@ -3,9 +3,9 @@ gamerTag: FireBrick
 IRL: Jessica
 clips:
   - title: TKO
-    file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
+    file: https://clips.twitch.tv/embed?clip=JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11&parent=www.suboptimalgaming.com
   - title: TKO pt 2
-    file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
+    file: https://clips.twitch.tv/embed?clip=ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb&parent=www.suboptimalgaming.com
 favoriteGames:
   - Zero Escape Trilogy
   - Wizard101
