--- a/src/routes/rosters/23-04-2023-1.md
+++ b/src/routes/rosters/23-04-2023-1.md
@@ -19,13 +19,7 @@ esportsTeamAndRole:
   esportsTeam: SOG - Test
   teamRoles:
     - Mascot
-clips:
-  - title: Oh Zach
-    file: https://clips.twitch.tv/SnappyBreakableLarkKevinTurtle-xQh0-Knnvf0wlVKU
-  - title: tko
-    file: https://clips.twitch.tv/JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11
-  - title: tko pt 2
-    file: https://clips.twitch.tv/ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb
+clips: []
 summonerName: Gh0st X
 playerAchievements: []
 favoriteGames:
