--- a/src/routes/rosters/17-02-2024.md
+++ b/src/routes/rosters/17-02-2024.md
@@ -1,31 +1,25 @@
 ---
-gamerTag: Maeks
-IRL: Max (Poach)
+gamerTag: SOG TheRat
+IRL: Matt
 socialMedia:
   - socialMedia:
       platform: Twitch
-      url: https://www.twitch.tv/sogmaeks
+      url: https://www.twitch.tv/sewerratmatt
+about: \*﻿Deep Voice\* I'm Batman
 esportsTeamAndRole:
   esportsTeam: SOG - Test
   teamRoles:
-    - Top Laner
-    - Poach
+    - Jungler
+    - Moral Support
 roleInOrg:
-  - eSports Coach/Player
-  - I don't know
-  - uhhhhh
-  - VP of eSports
-summonerName: Maeks
+  - '"I do the numbers"'
+summonerName: SOG TheRat
 playerAchievements:
-  - Not Emerald
-  - Won Commercial LBLCS Season 5 on 2000 years
-  - played top in CSL in 2018 on WWU Vikings - We were 2018 Conference Champions
-    and 2018 JV2 Quarter finalists (played under the name Ceroux)
-  - "#1 NA: Coach + Support + Friend + DM + Gaming Buddy you get the point"
+  - Soon I hope
+  - "Season 11 LBLCS Second Team All Star Jungler "
 favoriteGames:
-  - Gild Wars 2
-  - Long time League player
-  - TFT
-  - Strategy Games
-steamId: "76561198076562470"
+  - Wizard101
+  - League of Legends
+  - Madden NFL
+steamId: "76561198061266253"
 ---
