added player carousel

--- a/src/routes/rosters/11-11-2023.md
+++ b/src/routes/rosters/11-11-2023.md
@@ -1,23 +1,31 @@
 ---
 gamerTag: FireBrick
 IRL: Jessica
+socialMedia:
+  - socialMedia:
+      platform: Twitch
+      url: https://www.twitch.tv/firebrick
+roleInOrg:
+  - Web Developer & Designer
 clips:
   - title: TKO
     file: https://clips.twitch.tv/embed?clip=JoyousCoweringTofuDoubleRainbow-WyPhVCn0H8La3e11&parent=www.suboptimalgaming.com
   - title: TKO pt 2
     file: https://clips.twitch.tv/embed?clip=ShakingDarkBoarHoneyBadger-TrvooTG8TNYrBitb&parent=www.suboptimalgaming.com
-favoriteGames:
-  - Zero Escape Trilogy
-  - Wizard101
 ranks:
   - gameName: Valorant
     gameRank: Silver
-roleInOrg:
-  - Web Developer & Designer
-steamId: "76561198038986067"
+favoriteGames:
+  - title: Zero Escape Trilogy
+    url: https://www.mobygames.com/game/85977/zero-escape-the-nonary-games/
+    imageUrl: https://cdn.mobygames.com/covers/2229216-zero-escape-the-nonary-games-windows-front-cover.jpg
+  - title: Wizard101
+    url: https://www.mobygames.com/game/57911/wizard101/
+    imageUrl: https://cdn.mobygames.com/covers/435851-wizard101-windows-front-cover.jpg
 recentGame: Lethal Company
-socialMedia:
-  - socialMedia:
-      platform: Twitch
-      url: https://www.twitch.tv/firebrick
+esportsTeamAndRole:
+  esportsTeam: SOG
+  teamRoles:
+    - Glorious Leader
+steamId: "76561198038986067"
 ---
